--- a/documentation.html
+++ b/documentation.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>DOCUMENTATION Page</h1>
-    <p>   To build the server-side component of a “movies” web application. The web
+    <p>   To build the server-side component of a “movies” web application.<br> The web
           application will provide users with access to information about different
-          movies, directors, and genres. Users will be able to sign up, update their
+          movies, directors, and genres.<br> Users will be able to sign up, update their
           personal information, and create a list of their favorite movies...
     </p>
   </body>
